squid:S2325, findbugs:DM_NUMBER_CTOR - private methods that don't access instance data should be static, Performance - Method invokes inefficient Number constructor; use static valueOf instead